# notesdesktop

./: .gitignore  ACTIVE_FORMATTING_IMPLEMENTATION_SUMMARY.md  AI_ASSISTANT_GUIDE.md  AI_CHATS_SCHEMA.md  APP_FLOW.md  BROWSE_TAB_LAYOUT.md  BULLET_JOURNAL_SCHEMA.sql  CALENDAR_FEATURE.md  CALENDAR_IMPLEMENTATION_SUMMARY.md  CALENDAR_PROJECTS_IMPLEMENTATION_SUMMARY.md  CALENDAR_PROJECTS_INTEGRATION.md  CALENDAR_PROJECTS_VISUAL_GUIDE.md  CALENDAR_QUICKSTART.md  COLLAPSIBLE_SIDEBARS.md  COMMAND_DISPATCHER_GUIDE.md  COMPACT_TOOLBAR.md  COMPONENT_STRUCTURE_COMPARISON.md  CURSOR_UTILITIES_GUIDE.md  DATABASE_SCHEMA.md  DATA_SHEET_SCHEMA.sql  DELETE_CONFIRMATION_MODAL.md  DRAWING_ENHANCEMENTS.md  EDITOR_DEMO.md  ENHANCED_HYPERLINKS.md  EXPORT_MENU_IMPLEMENTATION.md  FOLDERS_GUIDE.md  FOLDERS_SCHEMA.md  HEADERS_AND_TOC.md  HEADER_CREATION_FIX_SUMMARY.md  HEADER_STYLING_AND_ACTIVE_STATE.md  HOW_TO_USE_KNOWLEDGE_GRAPH.md  HYPERLINKS_QUICKSTART.md  ICON_SETUP.md  IMAGE_BLOCK_IMPLEMENTATION_SUMMARY.md  IMAGE_BLOCK_INTEGRATION_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FOLDER_NOTES.md  KANBAN_BEFORE_AFTER.md  KANBAN_GUIDE.md  KANBAN_IMPROVEMENTS.md  (+34 more)
.github/: copilot-instructions.md
app/: globals.css  layout.tsx  page.tsx
components/: AIAssistant.tsx  BulletJournalEditor.tsx  CalendarModal.tsx  DataSheetEditor.tsx  DataSheetPickerDialog.tsx  DayEventsModal.tsx  DrawingEditor.tsx  EditorToolbar.tsx  FixedToolbar.tsx  FolderTree.tsx  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
(+120 files in other folders)
